--- a/website/jsconfig.json
+++ b/website/jsconfig.json
@@ -3,7 +3,7 @@
     "paths": {
       "@/*": ["./src/*"],
       "@/components/*": ["components/*"],
-      "@/api/*": ["api/*"]
+      "@/apis/*": ["apis/*"]
     }
   }
 }
